
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";
import "prototype/multi_id.proto";

message so_witnessVote {
	prototype.bp_voter_id              voter_id       =      1;
    prototype.bp_witness_id 								   witness_id     =      2;
    prototype.time_point_sec           vote_time      =      3;
      
}


message so_mem_witnessVote_by_voter_id {
	prototype.bp_voter_id           	voter_id   = 1;
}


message so_mem_witnessVote_by_witness_id {
	prototype.bp_witness_id 									witness_id = 1;
}


message so_mem_witnessVote_by_vote_time {
	prototype.time_point_sec        	vote_time  = 1;
}


message so_list_witnessVote_by_voter_id {
	prototype.bp_voter_id           	voter_id   = 1;
}


message so_unique_witnessVote_by_voter_id {
	prototype.bp_voter_id           	voter_id   = 1;
}
